--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=http://localhost:8080
 REACT_APP_OPENAI_API_KEY=sk-proj-StKfw4flMGdXtAnlFIAFT3BlbkFJgGN5gbQgcW9mr3sfL5VR
+REACT_APP_GOOGLE_PLACES_API_KEY=AIzaSyA15WAO3vKrOX4QepBVwTwcIsXe_6EAwlI
+VITE_API_URL=http://localhost:8080
