--- a/client/.env.example
+++ b/client/.env.example
@@ -5,3 +5,4 @@ VITE_API_URL=URL
 
 #Please see the OpenAI API key is "sk-proj-csAdImj4z6xAKehxFpuvT3BlbkFJK38WAZVs2KK1WTkiTCxi"
 #Please see the Places API key is  "AIzaSyBuaNA-soULsg2_VIP5M83u5q8W71235Xc"
+#please see URL is "http://localhost:8080"
